--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
@@ -36,15 +36,15 @@
                         Grid.Column="0"
                         Style="{StaticResource ButtonStyle}"/>
 
-                        <TextBlock 
-                           Text="Serenité Wedding"
-                           FontWeight="Bold"
-                           Grid.Row="0"
-                           Grid.Column="1"
-                           Grid.ColumnSpan="2"
-                           VerticalAlignment="Bottom"
-                           Margin="10,0,0,0"
-                           Style="{StaticResource Header1Style}" />
+                        <TextBlock Text="Chỉnh Sửa Tiệc Cưới"
+                                   FontSize="35"
+                                   FontFamily="Cambria"
+                                   FontWeight="Bold"
+                                   Grid.Row="0"
+                                   Grid.Column="1"
+                                   Grid.ColumnSpan="2"
+                                   VerticalAlignment="Center"
+                                   Margin="10" />
 
                         <Button 
                         Click="LuuTiec"
