--- a/QuanLyTiecCuoi/MVVM/View/MonAn/ThemMonAn.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/MonAn/ThemMonAn.xaml
@@ -9,7 +9,8 @@
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
-        MouseLeftButtonDown="Window_MouseLeftButtonDown">
+        MouseLeftButtonDown="Window_MouseLeftButtonDown"
+        Loaded="Window_Loaded">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis" />
@@ -68,14 +69,7 @@
                            Stretch="UniformToFill"
                            Margin="10" />
                 </Label>
-                <TextBox x:Name="txtHinhAnh"
-                         Text="{Binding HinhAnh, Mode=TwoWay}"
-                         Visibility="Collapsed"
-                         FontSize="14"
-                         Margin="10,0,10,10"
-                         LostFocus="TxtHinhAnh_LostFocus"
-                         Tag="Dán đường link ảnh tại đây" />
-
+                
                 <!-- Tên món ăn -->
                 <TextBox Style="{StaticResource WatermarkTextBoxStyle}"
                          Tag="Tên món ăn"
