--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
@@ -197,7 +197,7 @@
 
                                         <TextBlock Text="Ngày đãi tiệc" Grid.Column="0" VerticalAlignment="Center"/>
                                         <DatePicker
-                                            SelectedDate="{Binding TiecMoi.NgayDaiTiec}"
+                                            SelectedDate="{Binding TiecMoi.NgayDaiTiec, Mode=TwoWay}"
                                             SelectedDateFormat="Short"
                                             Grid.Column="1"
                                             Width="400"
@@ -206,6 +206,7 @@
                                             FontFamily="Cambria"
                                             VerticalAlignment="Center"
                                             x:Name="FilterDatePicker"
+                                            SelectedDateChanged ="FilterDatePicker_SelectedDateChanged" 
                                             Margin="0 10"/>
                                     </Grid>
                                     <!-- Ca -->
@@ -227,6 +228,7 @@
                                             FontSize="20" 
                                             FontFamily="Cambria" 
                                             Margin="0 10" 
+                                            SelectionChanged="ca_changed"
                                             VerticalContentAlignment="Center"/>
                                     </Grid>
 
@@ -271,7 +273,7 @@
                                         </StackPanel>
 
                                         <!-- Danh sách món ăn đã chọn -->
-                                        <ScrollViewer Height="100" VerticalScrollBarVisibility="Auto">
+                                        <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
                                             <ItemsControl ItemsSource="{Binding MonAnDaChon}">
                                                 <ItemsControl.ItemTemplate>
                                                     <DataTemplate>
@@ -304,7 +306,7 @@
                                                 VerticalAlignment="Center"/>
                                         </StackPanel>
                                         <!-- Danh sách dịch vụ đã chọn -->
-                                        <ScrollViewer Height="100" VerticalScrollBarVisibility="Auto">
+                                        <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
                                             <ItemsControl ItemsSource="{Binding DichVuDaChon}">
                                                 <ItemsControl.ItemTemplate>
                                                     <DataTemplate>
