--- a/QuanLyTiecCuoi/MVVM/View/Sanh/SanhView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/Sanh/SanhView.xaml
@@ -72,8 +72,7 @@
 
                     <!-- Hiển thị tổng số Sảnh-->
                     <StackPanel Orientation="Horizontal" Margin="30,0,10,0" Grid.Column="4" HorizontalAlignment="Right">
-                        <TextBlock Text="Số Sảnh Trống:" Margin="0,0,5,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
-                        <TextBlock Text="{Binding SoLuongSanhTrong}" Margin="0,0,0,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
+                        <TextBlock Text="{Binding ThongTinSoLuongSanh}" Margin="0,0,0,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
                     </StackPanel>
                 </Grid>
 
