--- a/QuanLyTiecCuoi/MVVM/View/DichVu/ChonDichVu.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DichVu/ChonDichVu.xaml
@@ -145,31 +145,54 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
                         <TextBlock Text="Các dịch vụ đã chọn:" FontWeight="Bold" FontSize="24" FontFamily="Cambria" Margin="0,0,0,5" Grid.Row="0"/>
 
-                        <Border Grid.Row="1"
+                        <Border
                                 CornerRadius="10"
                                 BorderBrush="#673500"
                                 BorderThickness="2"
                                 Background="White"
-                                Margin="10,0,0,10">
+                                Margin="10,33,0,21" Grid.RowSpan="2">
                             <ListBox x:Name="lstSelectedFoods"
                                      ItemsSource="{Binding DichVuDaChon}"
-                                     DisplayMemberPath="TenDichVu"
-                                     MouseLeftButtonUp="lstSelectedServices_MouseLeftButtonUp"
                                      BorderThickness="0"
                                      FontSize="20"
                                      FontFamily="Cambria"
                                      Foreground="Black"
-                                     Margin="10,0,0,10"/>
+                                     Margin="10,0,0,10">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,5">
+                                            <TextBlock Text="{Binding TenDichVu}" Width="200"/>
+                                            <TextBox Width="40"
+                                                     Text="{Binding SoLuong, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     TextChanged="SoLuong_TextChanged"
+                                                     Margin="10,0,0,0"/>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+
+
+                            </ListBox>
                         </Border>
+                        <TextBlock x:Name="txtTongTien"
+                                       FontSize="24"
+                                       FontWeight="Bold"
+                                   FontFamily="Cambria"
+                                       Margin="0,10,0,0"
+                                       Grid.Row="2"/>
+
+
+
+
 
                         <Button Content="OK"
                                 FontSize="20"
                                 FontFamily="Cambria"
-                                Grid.Row="2"
+                                Grid.Row="3"
                                 Width="150"
                                 Height="50"
                                 HorizontalAlignment="Right"
